Reorganized files/cleanup

--- a/rust_mbu/rust_engine/Cargo.toml
+++ b/rust_mbu/rust_engine/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
+resolver = "2"
 
 members = [
     "sdk",
     "move-gen",
     "magic",
-    "engine",
-    "examples/selfplay"
+    "engine"
 ]
