--- a/rust_mbu/rust_engine/engine/Cargo.toml
+++ b/rust_mbu/rust_engine/engine/Cargo.toml
@@ -4,16 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.75"
+derivative = "2.2.0"
 itertools = "0.11.0"
+lazy_static = "1.4.0"
 move_gen = { path = "../move-gen" }
 sdk = { path = "../sdk" }
 smallvec = "1.11.1"
 timeit = "0.1.2"
-
-[lib]
-name = "engine"
-path = "src/main.rs"
-
-[[bin]]
-name = "engine"
-path = "src/main.rs"
