Reformatted code, added comments to search

--- a/rust_mbu/rust_engine/Cargo.toml
+++ b/rust_mbu/rust_engine/Cargo.toml
@@ -1,12 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = [
-    "sdk",
-    "move-gen",
-    "magic",
-    "engine"
-]
+members = ["sdk", "move-gen", "magic", "engine"]
 
 [profile.release]
 opt-level = 3
