--- a/rust_mbu/rust_engine/engine/Cargo.toml
+++ b/rust_mbu/rust_engine/engine/Cargo.toml
@@ -10,3 +10,4 @@ itertools = "0.12.0"
 lazy_static = "1.4.0"
 move_gen = { path = "../move-gen" }
 sdk = { path = "../sdk" }
+smallvec = { version = "1.13.2", features = ["const_new"] }
