--- a/rust_mbu/rust_engine/engine/Cargo.toml
+++ b/rust_mbu/rust_engine/engine/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+arrayvec = "0.7.4"
 derivative = "2.2.0"
 itertools = "0.12.0"
 lazy_static = "1.4.0"
