Add basic heuristic (material counting)

--- a/cpp_bestia/src/CMakeLists.txt
+++ b/cpp_bestia/src/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_library(uci position.cpp)
+add_library(heuristic heuristic.cpp)
 target_include_directories(uci PUBLIC ../include)
+target_include_directories(heuristic PUBLIC ../include)
 target_compile_features(uci PUBLIC cxx_std_11)
+target_compile_features(heuristic PUBLIC cxx_std_20)
