change CMake for main.cpp to reflect changes done to engine implementation

--- a/cpp_bestia/app/CMakeLists.txt
+++ b/cpp_bestia/app/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(bestia main.cpp)
 target_link_libraries(bestia PRIVATE uci)
-target_link_libraries(bestia PRIVATE engine)
+target_link_libraries(bestia PRIVATE search)
