Add GoogleTest and test directory.

--- a/cpp_bestia/CMakeLists.txt
+++ b/cpp_bestia/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.0)
 
 project(bestia-z-wroclawia-cpp)
 
+enable_testing()
+
 add_subdirectory(src)
 
 add_subdirectory(app)
+
+add_subdirectory(test)
