--- a/cpp_bestia/test/CMakeLists.txt
+++ b/cpp_bestia/test/CMakeLists.txt
@@ -2,7 +2,11 @@ include(FetchContent)
 
 FetchContent_Declare(
   googletest
+  DOWNLOAD_EXTRACT_TIMESTAMP TRUE
   URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
 )
 
 FetchContent_MakeAvailable(googletest)
+
+# Prevent GoogleTest from overriding our compiler/linker options
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
