include heuristic tests in cmake

--- a/cpp_bestia/test/CMakeLists.txt
+++ b/cpp_bestia/test/CMakeLists.txt
@@ -14,5 +14,8 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 add_executable(tt_test tt_test.cpp)
 target_link_libraries(tt_test tt GTest::gmock_main)
 
+add_executable(heur_test heur_test.cpp)
+target_link_libraries(heur_test heuristic GTest::gmock_main)
+
 include(GoogleTest)
 gtest_discover_tests(tt_test)
