--- a/rust_mbu/rust_engine/sdk/Cargo.toml
+++ b/rust_mbu/rust_engine/sdk/Cargo.toml
@@ -13,3 +13,4 @@ num_enum = "0.7.1"
 rand = "0.8.5"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
+ndarray = "0.15"
